--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "csrc/cutlass"]
 	path = csrc/cutlass
-	url = https://github.com/NVIDIA/cutlass.git
+	url = https://github.com/zhanwenchen/cutlass.git
+	branch = vllm-flash-attn-headers 
