Use my native cutlass as a third party submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "csrc/cutlass"]
 	path = csrc/cutlass
-	url = https://github.com/NVIDIA/cutlass.git
+	url = https://github.com/zhanwenchen/cutlass.git
+	tag = v3.5.1-native
 [submodule "csrc/composable_kernel"]
 	path = csrc/composable_kernel
 	url = https://github.com/ROCm/composable_kernel.git
